code/tui/snapshots/inline/collaboration_modes/collaboration_inline_default_statusline_chinese.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: render(&app)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
  Automatic model                                                               
  ← 仪 表 盘
