code/tui/snapshots/inline/collaboration_modes/collaboration_inline_statusline_chinese.snap
---
source: code/tui/src/app/collaboration_modes_tests.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
>                                                                               
────────────────────────────────────────────────────────────────────────────────
  Automatic model · 计 划                                                         
  ← 仪 表 盘  · ? 查 看 快 捷 键
